--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.6",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
