--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "framer-motion": "^12.0.6",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.474.0",
+    "motion": "^12.0.6",
     "next": "15.1.6",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
