--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "motion": "^12.0.6",
     "next": "15.1.6",
     "next-mdx-remote": "^5.0.0",
+    "next-view-transitions": "^0.1.0",
     "qss": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
