--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -27,6 +28,7 @@
     "motion": "^12.0.6",
     "next": "15.1.6",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.4",
     "next-view-transitions": "^0.1.0",
     "qss": "^3.0.0",
     "react": "^19.0.0",
